[project]
name = "airflow-dag-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "clickhouse-connect>=0.9.1",
    "httpx>=0.28.1",
    "marimo>=0.15.5",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
]
